# PANEL-L3HO

./: .replit  API_PUBLICA_LISTA.md  CONEXION_SERVIDOR_REAL.md  GUIA_CONEXION_API.md  README_TERMUX.md  SOLUCION_DOMINIO_PUBLICO.md  app.py  auto_update_ligamx.py  auto_updater_ligamx_2025.py  ejemplo_conexion_api.html  ejemplo_conexion_api_servidor.html  ejemplo_conexion_local.html  init_liga_mx.py  init_simple.py  keep_alive.py  main.py  models.py  pyproject.toml  replit.md  routes.py  routes_api_fix.py  routes_backup.py  routes_liga_mx.py  routes_scraping_music.py  run.sh  test_api_externa.html  test_liga_mx_api.py  utils.py
attached_assets/: Pasted--Necesito-que-tomes-mi-proyecto-actual-PANEL-L3HO-backend-Flask-frontend-HTML-CSS-JS-bas-1755140109095_1755140109097.txt  Pasted--Quiero-que-desarrolles-una-API-profesional-de-la-Liga-MX-en-Python-usando-Flask-que-se-int-1755132585593_1755132585595.txt  Pasted--Quiero-que-tomes-mi-proyecto-actual-PANEL-L3HO-backend-Flask-frontend-HTML-CSS-JS-base-de-1755134374816_1755134374817.txt  Pasted--Ya-tengo-una-p-gina-web-funcionando-que-incluye-API-de-datos-de-f-tbol-Sistema-de-1754982647234_1754982647238.txt  Pasted-Hola-este-es-mi-proyecto-privado-PANEL-L3HO-Flask-SQLite-Ya-tengo-login-modelos-User-Ap-1754101391211_1754101391214.txt  Pasted-Hola-este-es-mi-proyecto-privado-PANEL-L3HO-Flask-SQLite-Ya-tengo-login-modelos-User-Ap-1754101896668_1754101896670.txt  Pasted-Hola-este-es-mi-proyecto-privado-PANEL-L3HO-Flask-SQLite-Ya-tengo-login-modelos-User-Ap-1754984299318_1754984299322.txt  (+3 more)
instance/: panel_l3ho.db
services/: music.py  (+12 more)
(+25 files in other folders)
