[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "ffmpeg-python>=0.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=5.4.0",
    "lyricsgenius>=3.7.0",
    "mutagen>=1.47.0",
    "psycopg2-binary>=2.9.10",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.42",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "yt-dlp>=2025.8.11",
]
